--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -12,8 +12,10 @@
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "bcrypt": "^5.1.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.3",
     "next": "13.4.19",
     "react": "18.2.0",
