--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
